--- a/template/req.html
+++ b/template/req.html
@@ -159,7 +159,7 @@
         <marquee behavior="scroll" direction="left" scrollamount="15">
         <div class="toogle"></div>
         <div id="file-name">
-            %s
+            {{file_name}}
         </div>
         </marquee>
                 <!-- Online Video Player -> to be displayed here  -->
